<resources>
    <string name="app_name">ruler</string>
    <string name="horizontal_ruler">Horizontal ruler</string>
    <string name="measure_unit">Measure Unit</string>
    <string name="inch">Inch</string>
    <string name="background_color">Background color</string>
    <string name="mm">mm</string>
    <string name="color">Color:</string>
    <string name="text_color">Text color</string>
    <string name="line_color">Line color</string>
</resources>