<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.zukka.ruler.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <com.zukka.rulerlibrary.Ruler
            android:id="@+id/horizontalRuler"
            style="@style/myRulerStyleHorizontal"
            android:layout_marginStart="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.zukka.rulerlibrary.Ruler
            android:id="@+id/verticalRuler"
            style="@style/myRulerStyleVertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/horizontalRuler" />

        <com.zukka.ruler.CanvasView
            android:id="@+id/canvasView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/linearLayout"
            app:layout_constraintStart_toEndOf="@+id/verticalRuler"
            app:layout_constraintTop_toBottomOf="@+id/horizontalRuler" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="200dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:padding="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/horizontalRuler">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/horizontal_ruler"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/measure_unit" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/ruler_um"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="@{viewModel.umLiveData}"
                android:text="@string/inch" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/background_color" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/color" />
                <Spinner
                    android:id="@+id/color_spinner"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_marginStart="8dp"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:spinnerMode="dialog"
                    android:background="@drawable/color_blob"
                    android:layout_height="35dp"
                    />
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/text_color" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/color" />
                <Spinner
                    android:id="@+id/text_color_spinner"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_marginStart="8dp"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:spinnerMode="dialog"
                    android:background="@drawable/color_blob"
                    android:layout_height="35dp"
                    />
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/line_color" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/color" />
                <Spinner
                    android:id="@+id/line_color_spinner"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_marginStart="8dp"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:spinnerMode="dialog"
                    android:background="@drawable/color_blob"
                    android:layout_height="35dp"
                    />
            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>